fix form label alignment css

--- a/assets/css/pages/form.scss
+++ b/assets/css/pages/form.scss
@@ -73,7 +73,7 @@
         }
     }
     @media (max-width: $navbar-breaksize) {
-        col-lg-4 {
+        .col-lg-4,.col-lg-3 {
             label {
                 float: none;
             }
